# TestTaskBackend

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run_tests.sh
alembic/: env.py
alembic/versions/: ec676f46a3fc_init.py
src/: dependencies.py  main.py  settings.py
src/activities/: repository.py
src/buildings/: repository.py
src/core/db/: db_manager.py  models.py  repository.py
src/core/dto/: activity.py  building.py  organization.py
src/integrations/: redis.py
src/organizations/: repository.py  router.py  schemas.py  service.py
tests/: conftest.py  utils.py
tests/organizations/: test_organizations_cache.py  test_organizations_e2e.py
