[project]
name = "testtaskbackend"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.133.1,<0.134.0)",
    "uvicorn (>=0.41.0,<0.42.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "sqlalchemy (>=2.0.47,<3.0.0)",
    "geoalchemy (>=0.7.2,<0.8.0)",
    "geoalchemy2 (>=0.18.3,<0.19.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "redis (>=7.2.1,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]


[tool.pytest.ini_options]
addopts = "-vv --showlocals --tb=long -s --maxfail=1 --show-capture=all --cov . --cov-report=term-missing"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = ["ignore"]
[tool.coverage.run]
branch = true
parallel = true
concurrency = ["greenlet","thread"]
